syntax = "proto3";
package kv;

message NotFound {
    bytes key = 1;
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    NotFound error = 1;
    bytes value = 2;
}

message SetRequest {
    bytes key = 1;
    bytes value = 2;
}

message SetResponse {
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
}

message ScanRequest {
    bytes start_key = 1;
    bytes end_key = 2;
}

message Pair {
    bytes key = 1;
    bytes value = 2;
}

message ScanResponse {
    repeated Pair pairs = 1;
}

service KV {
    // Get a key
    rpc Get(GetRequest) returns (GetResponse) {}
    // Set a key/value
    rpc Set(SetRequest) returns (SetResponse) {}
    // Delete a key
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    // Scan
    rpc Scan(ScanRequest) returns (ScanResponse) {}
}